# QSBDGui

./: CMakeLists.txt  README.md  cmake_install.cmake  feed.json  main.cpp
assert/qml/: map.qml  mapStatic.qml
src/controller/: controller.cpp  controller.h
src/csvdialog/: csvdialog.cpp  csvdialog.h
src/dbscan/: dbscan.h  kdtree.cpp
src/kmeans/: kmeans.h
src/kmedoids/: kmedoids.hpp
src/mainwindow/: mainwindow.cpp  mainwindow.h
src/model/: model.cpp  model.h
src/qmlview/: qmlview.cpp  qmlview.h
src/sketchmenudialog/: sketchmenudialog.cpp  sketchmenudialog.h
src/view/: view.cpp  view.h
test/: qmlviewtest.cpp
